--- a/anticipate/views/index.ejs
+++ b/anticipate/views/index.ejs
@@ -8,11 +8,12 @@
 
 		<body ng-app="anticipate">
 		  <div class="row">
-		    <div class="col-md-6 col-md-offset-3">
+		    <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
 					<div class="page-header"><h1>ANTICIPATE</h1></div>		    	
 		    	<ui-view></ui-view>
 
 		    	<!-- home.html template -->
+
 		    	<script type="text/ng-template" id="/home.html">
 						<div ng-repeat="post in posts | orderBy: '-upvotes'">
 							<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
