Create service for getOne, name resolve and inject in controller

--- a/anticipate/views/index.ejs
+++ b/anticipate/views/index.ejs
@@ -20,7 +20,7 @@
 							{{post.upvotes}}
 							<span><a ng-show="post.link" href="{{post.link}}">{{post.title}}</a></span>
 							<span ng-hide="post.link">{{post.title}}</span>
-							<span><a href='#/posts/{{$index}}'>Coments</a></span>
+							<span><a href='#/posts/{{post._id}}'>Coments</a></span>
 						</div>
 						
 
