--- a/anticipate/views/index.ejs
+++ b/anticipate/views/index.ejs
@@ -10,33 +10,43 @@
 		<body ng-app="anticipate">
 		  <div class="row">
 		    <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
-					<div class="page-header"><h1>ANTICIPATE</h1></div>		    	
+					<div class="page-header center">
+						<h1>A N T I C I P A T E</h1>
+						<p>Imaginative speculation meets social posting and voting</p>
+					</div>		    	
+		    		
 		    	<ui-view></ui-view>
 
 		    	<!-- home.html template -->
 
 		    	<script type="text/ng-template" id="/home.html">
-						<div ng-repeat="post in posts | orderBy: '-upvotes'" >
-							<div class="post" >
-								<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
-								{{post.upvotes}}
-								<span><a ng-show="post.link" href="{{post.link}}">{{post.title}}</a></span>
-								<span ng-hide="post.link">{{post.title}}</span>
-								<span><a href='#/posts/{{post._id}}'>Coments</a></span>							
-							</div>
+						<div class="post-container">
+							<div ng-repeat="post in posts | orderBy: '-upvotes'" >
+								<div class="post" >
+									<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
+									{{post.upvotes}}
+									<span class="post__title"><a ng-show="post.link" href="{{post.link}}">{{post.title}}</a></span>
+									<span class="post__title" ng-hide="post.link">{{post.title}}</span>
+									<span><a href='#/posts/{{post._id}}'> {{post.comments.length}} Comments</a></span>							
+								</div>
+							</div>						
 						</div>
 						
 
-						<form ng-submit="addPost()">
-							<h3>Add a new post </h3>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Title" ng-model="title"></input>
-							</div>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Link" ng-model="link"></input>
-							</div>
-							<button type="submit" class="btn btn-primary"> POST </button>
-						</form>			
+						<div class="post-form">
+							<form ng-submit="addPost()">
+								<h3>Add a new post </h3>
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Title" ng-model="title"></input>
+								</div>
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Link" ng-model="link"></input>
+								</div>
+								<button type="submit" class="btn btn-primary post-button"> P O S T </button>
+							</form>			
+						</div>
+
+						
 		    	</script>
 
 		    	<!-- posts.html template -->
