Make additional changes

--- a/anticipate/views/index.ejs
+++ b/anticipate/views/index.ejs
@@ -81,7 +81,7 @@
 				        placeholder="Comment"
 				        ng-model="body"></input>
 				      </div>
-				      <button type="submit" class="btn btn-primary">Post</button>
+				      <button type="submit" class="btn btn-primary post-button">Post</button>
 				    </form>		
 						
 						<h4>
